--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div id="sidebar">
       <ul>
-        <li><a class="active" href="#about">About</a></li>
+        <li id="first-item"><a class="active" href="#about">About</a></li>
         <li><a href="#section1">Section 1</a></li>
         <li><a href="#section2">Section 2</a></li>
         <li><a href="#section3">Section 3</a></li>
