--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     <script>
         console.log("begin script");
         // Insert your code here
-
-        console.log("end script");
+        var firstItem = document.getElementById("first-item")
+        firstItem.innerText = '\"Greetings List Item! I\'m a string from another planet!\"'
       </script>
 
   </body>
