--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         console.log("begin script");
         // Insert your code here
         var firstItem = document.getElementById("first-item")
-        firstItem.innerText = '\"Greetings List Item! I\'m a string from another planet!\"'
+        firstItem.innerHTML = '<a class="active" href="#about">Greetings List Item! I\'m a string from another planet!</a>'
       </script>
 
   </body>
