--- a/index.html
+++ b/index.html
@@ -112,8 +112,14 @@
     <script>
         console.log("begin script");
         // Insert your code here
-        var firstItem = document.getElementById("first-item")
-        firstItem.innerHTML = '<a class="active" href="#about">Greetings List Item! I\'m a string from another planet!</a>'
+        var firstItem = document.getElementById("first-item");
+
+        firstItem.innerHTML = '<a class="active" href="#about">Greetings List Item! I\'m a string from another planet!</a>';
+
+        var changeThird = document.getElementById("change-me");
+
+        changeThird.innerText = 'Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.';
+
       </script>
 
   </body>
